# openstt

./: .gitignore  Makefile  README.md  package-lock.json  package.json  release-guide.md
docs/plans/2025-02-13-auto-updater-design/: _index.md  architecture.md  bdd-specs.md  best-practices.md
plans/: roadmap.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: glm_mlx.py
src-tauri/src/: audio.rs  dictation.rs  elevenlabs_realtime.rs  lib.rs  main.rs  models.rs  recording.rs  soniox_realtime.rs
