[package]
name = "openstt-app"
version = "1.0.7"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "openstt-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openstt_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "test_elevenlabs"
path = "src/bin/test_elevenlabs.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
rubato = "0.15"
symphonia = { version = "0.5", features = ["aac", "alac", "flac", "mp3", "wav", "isomp4"] }
whisper-rs = { version = "0.12", features = ["metal"] }
cpal = "0.15"
arboard = "3"
flate2 = "1"
tar = "0.4"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
